--- a/xlsxtoxml/.project
+++ b/xlsxtoxml/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Generate_xml</name>
+	<name>xlsxtoxml</name>
 	<comment></comment>
 	<projects>
 	</projects>
